// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the between operator 1`] = `
Object {
  "range": Object {
    "data.attributes.identifiers.seqdb_id.keyword_numeric": Object {
      "gte": "stringValue1",
      "lte": "stringValue3",
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the empty operator 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.identifiers.seqdb_id",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must": Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": "",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the exactMatch operator 1`] = `
Object {
  "term": Object {
    "data.attributes.identifiers.seqdb_id.keyword": "stringValue",
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the in operator 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue1",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue2",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the notEmpty operator 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "exists": Object {
        "field": "data.attributes.identifiers.seqdb_id",
      },
    },
    "must_not": Object {
      "term": Object {
        "data.attributes.identifiers.seqdb_id.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the notEquals operator 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": "stringValue",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.identifiers.seqdb_id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the notIn operator 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue1",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue2",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the startsWith operator 1`] = `
Object {
  "prefix": Object {
    "data.attributes.identifiers.seqdb_id.keyword": Object {
      "case_insensitive": true,
      "value": "stringValue",
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Attribute level tests Using the wildcard operator 1`] = `
Object {
  "wildcard": Object {
    "data.attributes.identifiers.seqdb_id.keyword": Object {
      "case_insensitive": true,
      "value": "*stringValue*",
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the between operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "range": Object {
              "included.attributes.identifiers.seqdb_id.keyword_numeric": Object {
                "gte": "stringValue1",
                "lte": "stringValue3",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the empty operator 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "should": Array [
            Object {
              "bool": Object {
                "must_not": Object {
                  "nested": Object {
                    "path": "included",
                    "query": Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "exists": Object {
                              "field": "included.attributes.identifiers.seqdb_id",
                            },
                          },
                          Object {
                            "term": Object {
                              "included.type": "material-sample",
                            },
                          },
                        ],
                      },
                    },
                  },
                },
              },
            },
            Object {
              "nested": Object {
                "path": "included",
                "query": Object {
                  "bool": Object {
                    "must": Array [
                      Object {
                        "term": Object {
                          "included.attributes.identifiers.seqdb_id.keyword": "",
                        },
                      },
                      Object {
                        "term": Object {
                          "included.type": "material-sample",
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.parentMaterialSample.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the exactMatch operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.attributes.identifiers.seqdb_id.keyword": "stringValue",
            },
          },
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the in operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "bool": Object {
              "must": Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "term": Object {
                        "included.attributes.identifiers.seqdb_id.keyword": Object {
                          "case_insensitive": true,
                          "value": "stringValue1",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.identifiers.seqdb_id.keyword": Object {
                          "case_insensitive": true,
                          "value": "stringValue2",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.identifiers.seqdb_id.keyword": Object {
                          "case_insensitive": true,
                          "value": "stringValue3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the notEmpty operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
          Object {
            "exists": Object {
              "field": "included.attributes.identifiers.seqdb_id",
            },
          },
        ],
        "must_not": Object {
          "term": Object {
            "included.attributes.identifiers.seqdb_id.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the notEquals operator 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "material-sample",
                },
              },
              "must_not": Object {
                "term": Object {
                  "included.attributes.identifiers.seqdb_id.keyword": "stringValue",
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "material-sample",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "included.attributes.identifiers.seqdb_id",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.relationships.parentMaterialSample.data.id",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the notIn operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "bool": Object {
              "must_not": Object {
                "bool": Object {
                  "minimum_should_match": 1,
                  "should": Array [
                    Object {
                      "term": Object {
                        "included.attributes.identifiers.seqdb_id.keyword": Object {
                          "case_insensitive": true,
                          "value": "stringValue1",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.identifiers.seqdb_id.keyword": Object {
                          "case_insensitive": true,
                          "value": "stringValue2",
                        },
                      },
                    },
                    Object {
                      "term": Object {
                        "included.attributes.identifiers.seqdb_id.keyword": Object {
                          "case_insensitive": true,
                          "value": "stringValue3",
                        },
                      },
                    },
                  ],
                },
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the startsWith operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "stringValue",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderIdentifierSearch transformIdentiferToDSL function STRING based identifier tests Relationship level tests Using the wildcard operator 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "wildcard": Object {
              "included.attributes.identifiers.seqdb_id.keyword": Object {
                "case_insensitive": true,
                "value": "*stringValue*",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "material-sample",
            },
          },
        ],
      },
    },
  },
}
`;
